rsass/tests/spec/libsass_todo_tests/errors/import/mod.rs
//! Tests auto-converted from "sass-spec/spec/libsass-todo-tests/errors/import"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("import")
}

mod url;
